--- a/pirate-photometry.yaml
+++ b/pirate-photometry.yaml
@@ -5,32 +5,88 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=1_llvm
+  - argon2-cffi=21.1.0=py39h3811e60_2
   - astroquery=0.4.4=pyhd8ed1ab_0
+  - async_generator=1.10=py_0
+  - attrs=21.2.0=pyhd8ed1ab_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
   - beautifulsoup4=4.10.0=pyha770c72_0
+  - bleach=4.1.0=pyhd8ed1ab_0
   - brotlipy=0.7.0=py39h3811e60_1003
   - cffi=1.14.6=py39he32792d_0
   - charset-normalizer=2.0.8=pyhd8ed1ab_0
   - cryptography=36.0.0=py39h95dcef6_0
+  - debugpy=1.2.0=py39h41458e0_0
+  - decorator=5.1.0=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - entrypoints=0.3=pyhd8ed1ab_1003
   - html5lib=1.1=pyh9f0ad1d_0
   - idna=3.1=pyhd3deb0d_0
   - importlib-metadata=4.8.2=py39hf3d152e_0
   - importlib_metadata=4.8.2=hd8ed1ab_0
+  - importlib_resources=5.4.0=pyhd8ed1ab_0
+  - ipykernel=6.6.0=py39hef51801_0
+  - ipython=7.30.1=py39hf3d152e_0
+  - ipython_genutils=0.2.0=py_1
+  - ipywidgets=7.6.5=pyhd8ed1ab_0
+  - jedi=0.18.1=py39hf3d152e_0
   - jeepney=0.7.1=pyhd8ed1ab_0
+  - jinja2=3.0.3=pyhd8ed1ab_0
+  - jsonschema=4.2.1=pyhd8ed1ab_0
+  - jupyter=1.0.0=py39hf3d152e_7
+  - jupyter_client=7.1.0=pyhd8ed1ab_0
+  - jupyter_console=6.4.0=pyhd8ed1ab_0
+  - jupyter_core=4.9.1=py39hf3d152e_1
+  - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
+  - jupyterlab_widgets=1.0.2=pyhd8ed1ab_0
   - keyring=23.3.0=py39hf3d152e_0
   - libgcc-ng=11.2.0=h1d223b6_11
+  - libsodium=1.0.18=h36c2ea0_1
   - llvm-openmp=12.0.1=h4bd325d_1
+  - markupsafe=2.0.1=py39h3811e60_1
+  - matplotlib-inline=0.1.3=pyhd8ed1ab_0
+  - mistune=0.8.4=py39h3811e60_1005
   - mkl=2021.4.0=h8d4b97c_729
+  - nbclient=0.5.9=pyhd8ed1ab_0
+  - nbconvert=6.3.0=py39hf3d152e_1
+  - nbformat=5.1.3=pyhd8ed1ab_0
+  - nest-asyncio=1.5.4=pyhd8ed1ab_0
+  - notebook=6.4.6=pyha770c72_0
+  - packaging=21.3=pyhd8ed1ab_0
+  - pandoc=2.16.2=h7f98852_0
+  - pandocfilters=1.5.0=pyhd8ed1ab_0
+  - parso=0.8.3=pyhd8ed1ab_0
+  - pexpect=4.8.0=pyh9f0ad1d_2
+  - pickleshare=0.7.5=py_1003
+  - prometheus_client=0.12.0=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.23=pyha770c72_0
+  - prompt_toolkit=3.0.23=hd8ed1ab_0
+  - ptyprocess=0.7.0=pyhd3deb0d_0
   - pycparser=2.21=pyhd8ed1ab_0
+  - pygments=2.10.0=pyhd8ed1ab_0
   - pyopenssl=21.0.0=pyhd8ed1ab_0
+  - pyrsistent=0.18.0=py39h3811e60_0
   - pysocks=1.7.1=py39hf3d152e_4
   - python-mimeparse=1.6.0=py_1
   - python_abi=3.9=2_cp39
   - pyvo=1.1=pyhd8ed1ab_1
+  - pyzmq=20.0.0=py39h25affbc_1
+  - qtconsole=5.2.1=pyhd8ed1ab_0
+  - qtpy=1.11.3=pyhd8ed1ab_0
   - requests=2.26.0=pyhd8ed1ab_1
   - secretstorage=3.3.1=py39hf3d152e_1
+  - send2trash=1.8.0=pyhd8ed1ab_0
   - soupsieve=2.3=pyhd8ed1ab_0
+  - terminado=0.12.1=py39hf3d152e_1
+  - testpath=0.5.0=pyhd8ed1ab_0
+  - traitlets=5.1.1=pyhd8ed1ab_0
   - urllib3=1.26.7=pyhd8ed1ab_0
+  - wcwidth=0.2.5=pyh9f0ad1d_2
   - webencodings=0.5.1=py_1
+  - widgetsnbextension=3.5.2=py39hf3d152e_1
+  - zeromq=4.3.3=h58526e2_3
   - zipp=3.6.0=pyhd8ed1ab_0
   - astropy=4.3.1=py39h09021b7_0
   - blas=1.0=mkl
@@ -91,6 +147,7 @@ dependencies:
   - qt=5.9.7=h5867ecd_1
   - readline=8.1=h27cfd23_0
   - scipy=1.6.2=py39had2a1c9_1
+  - seaborn=0.11.2=pyhd3eb1b0_0
   - setuptools=58.0.4=py39h06a4308_0
   - sip=4.19.13=py39h2531618_0
   - six=1.16.0=pyhd3eb1b0_0
